test/MC/SVE/regression-tests/negative_tests/sve-clastb-018.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU64VCondXBVV
// Restricted predicate has range [0, 7].
clastb z16.d, p8, z16.d, z30.d
// CHECK: error: invalid operand
